--- a/front/site/quiz/egipcia.html
+++ b/front/site/quiz/egipcia.html
@@ -175,20 +175,18 @@
             <section id="secao-pergunta-6" class="secao-pergunta">
                 <div class="informacoes-questao">
                     <h1 class="questao">Pergunta 6:</h1>
-                    <p class="pergunta">Qual é a história do Martelo Mjölnir, arma de Thor, e por que é tão famoso?</p>
+                    <p class="pergunta">Qual é o deus com cabeça de chacal associado à morte e ao embalsamamento na mitologia egípcia?</p>
                     <p class="dificuldade">Nível médio</p>
                 </div>
                 <div class="alternativas">
-                    <input type="radio" name="questao6" class="tamanhoInputOriginal" value="errado">
-                    <label>A - Mjölnir foi forjado por Loki e usado para criar trovões e relâmpagos</label>
-                    <input type="radio" name="questao6" class="tamanhoInputOriginal" value="errado">
-                    <label>B - Mjölnir foi roubado por um gigante e Thor teve que buscá-lo em uma jornada épica.</label>
                     <input type="radio" name="questao6" class="tamanhoInputOriginal" value="certo">
-                    <label>C - Mjölnir foi presenteado a Thor por Odin e é capaz de derrotar os inimigos dos
-                        deuses.</label>
+                    <label>A - Anúbis</label>
                     <input type="radio" name="questao6" class="tamanhoInputOriginal" value="errado">
-                    <label> D -Mjölnir é uma arma lendária, mas não desempenha um papel importante na mitologia
-                        nórdica.</label>
+                    <label>B - Seth</label>
+                    <input type="radio" name="questao6" class="tamanhoInputOriginal" value="errado">
+                    <label>C - Hórus</label>
+                    <input type="radio" name="questao6" class="tamanhoInputOriginal" value="errado">
+                    <label>D - Ptah</label>
                     <div class="buttonResponder">
                         <input type="button" value="Responder" id="btnPergunta6">
                     </div>
@@ -197,20 +195,18 @@
             <section id="secao-pergunta-7" class="secao-pergunta">
                 <div class="informacoes-questao">
                     <h1 class="questao">Pergunta 7:</h1>
-                    <p class="pergunta"> Quais são os eventos principais que ocorrem durante o Ragnarök na mitologia
-                        nórdica?</p>
+                    <p class="pergunta">Explique a importância do rio Nilo na mitologia egípcia e na vida cotidiana dos egípcios</p>
                     <p class="dificuldade">Nível difícil</p>
                 </div>
                 <div class="alternativas">
                     <input type="radio" name="questao7" class="tamanhoInputOriginal" value="errado">
-                    <label>A - Uma grande festa dos deuses antes do fim do mundo.</label>
+                    <label>A - O rio Nilo tinha pouca importância na mitologia egípcia</label>
                     <input type="radio" name="questao7" class="tamanhoInputOriginal" value="errado">
-                    <label> B - Uma jornada de Thor para resgatar seu martelo Mjölnir do submundo.</label>
+                    <label>B - O rio Nilo era considerado um local de adoração de deuses menores</label>
                     <input type="radio" name="questao7" class="tamanhoInputOriginal" value="certo">
-                    <label> C - Uma batalha final entre os deuses e as forças do caos, resultando na destruição do
-                        mundo.</label>
+                    <label>C - O rio Nilo era visto como a fonte de vida e fertilidade, desempenhando um papel fundamental na agricultura e na mitologia</label>
                     <input type="radio" name="questao7" class="tamanhoInputOriginal" value="errado">
-                    <label>D - A ascensão de um novo deus supremo para governar os Nove Mundos.</label>
+                    <label>D - O rio Nilo era evitado pelos egípcios devido a superstições antigas</label>
                     <div class="buttonResponder">
                         <input type="button" value="Responder" id="btnPergunta7">
                     </div>
