--- a/front/site/quiz/nordica.html
+++ b/front/site/quiz/nordica.html
@@ -184,7 +184,7 @@
                     <label>C - Mjölnir foi presenteado a Thor por Odin e é capaz de derrotar os inimigos dos
                         deuses.</label>
                     <input type="radio" name="questao6" class="tamanhoInputOriginal" value="errado">
-                    <label>D -Mjölnir é uma arma lendária, mas não desempenha um papel importante na mitologia
+                    <label>D - Mjölnir é uma arma lendária, mas não desempenha um papel importante na mitologia
                         nórdica.</label>
                     <div class="buttonResponder">
                         <input type="button" value="Responder" id="btnPergunta6">
@@ -194,20 +194,20 @@
             <section id="secao-pergunta-7" class="secao-pergunta">
                 <div class="informacoes-questao">
                     <h1 class="questao">Pergunta 7:</h1>
-                    <p class="pergunta"> Quais são os eventos principais que ocorrem durante o Ragnarök na mitologia
+                    <p class="pergunta">Quais são os eventos principais que ocorrem durante o Ragnarök na mitologia
                         nórdica?</p>
                     <p class="dificuldade">Nível difícil</p>
                 </div>
                 <div class="alternativas">
                     <input type="radio" name="questao7" class="tamanhoInputOriginal" value="errado">
-                    <label>A - Uma grande festa dos deuses antes do fim do mundo.</label>
+                    <label>A - Uma grande festa dos deuses antes do fim do mundo</label>
                     <input type="radio" name="questao7" class="tamanhoInputOriginal" value="errado">
-                    <label> B - Uma jornada de Thor para resgatar seu martelo Mjölnir do submundo.</label>
+                    <label>B - Uma jornada de Thor para resgatar seu martelo Mjölnir do submundo</label>
                     <input type="radio" name="questao7" class="tamanhoInputOriginal" value="certo">
-                    <label> C - Uma batalha final entre os deuses e as forças do caos, resultando na destruição do
-                        mundo.</label>
+                    <label>C - Uma batalha final entre os deuses e as forças do caos, resultando na destruição do
+                        mundo</label>
                     <input type="radio" name="questao7" class="tamanhoInputOriginal" value="errado">
-                    <label>D - A ascensão de um novo deus supremo para governar os Nove Mundos.</label>
+                    <label>D - A ascensão de um novo deus supremo para governar os Nove Mundos</label>
                     <div class="buttonResponder">
                         <input type="button" value="Responder" id="btnPergunta7">
                     </div>
