--- a/front/site/quiz/egipcia.html
+++ b/front/site/quiz/egipcia.html
@@ -215,21 +215,18 @@
             <section id="secao-pergunta-8" class="secao-pergunta">
                 <div class="informacoes-questao">
                     <h1 class="questao">Pergunta 8:</h1>
-                    <p class="pergunta">Explique o mito de Baldur e como sua morte afetou os deuses nórdicos</p>
+                    <p class="pergunta">Qual é a história de Osíris na mitologia egípcia e qual é o seu papel na religião egípcia?</p>
                     <p class="dificuldade">Nível difícil</p>
                 </div>
                 <div class="alternativas">
                     <input type="radio" name="questao8" class="tamanhoInputOriginal" value="errado">
-                    <label>A - Baldur era um deus da guerra que morreu em batalha, enfraquecendo os deuses</label>
-                    <input type="radio" name="questao8" class="tamanhoInputOriginal" value="errado">
-                    <label> B - Baldur era um deus da beleza que se apaixonou por uma mortal e morreu de
-                        tristeza</label>
+                    <label>A - Osíris era um deus guerreiro que liderou o exército egípcio em batalhas</label>
                     <input type="radio" name="questao8" class="tamanhoInputOriginal" value="certo">
-                    <label> C - Baldur era imortal, e sua morte foi uma surpresa para os deuses, que ficaram
-                        abalados</label>
+                    <label>B - Osíris era um deus associado à morte e à ressurreição, simbolizando a crença na vida após a morte e o renascimento</label>
                     <input type="radio" name="questao8" class="tamanhoInputOriginal" value="errado">
-                    <label>D - Baldur era um deus amado cuja morte levou a uma série de eventos que levaram ao
-                        Ragnarök</label>
+                    <label>C - Osíris era um faraó cruel que governou o Egito com mão de ferro</label>
+                    <input type="radio" name="questao8" class="tamanhoInputOriginal" value="errado">
+                    <label>D - Osíris era um deus menor sem grande influência na religião egípcia</label>
                     <div class="buttonResponder">
                         <input type="button" value="Responder" id="btnPergunta8">
                     </div>
