--- a/front/site/quiz/egipcia.html
+++ b/front/site/quiz/egipcia.html
@@ -235,17 +235,16 @@
             <section id="secao-pergunta-9" class="secao-pergunta">
                 <div class="informacoes-questao">
                     <h1 class="questao">Pergunta 9:</h1>
-                    <p class="pergunta">Quem é a valquíria mais famosa da mitologia nórdica e qual é o seu papel nas
-                        histórias?</p>
+                    <p class="pergunta">Qual é o significado dos hieróglifos na cultura egípcia antiga?</p>
                     <p class="dificuldade">Nível difícil</p>
                 </div>
                 <div class="alternativas">
                     <input type="radio" name="questao9" class="tamanhoInputOriginal" value="errado">
-                    <label>A - A Hela, a deusa da morte, que conduz as almas para o Valhalla</label>
+                    <label>A - Os hieróglifos eram um sistema de escrita que incluía símbolos e imagens usados para registrar eventos, história e religião</label>
                     <input type="radio" name="questao9" class="tamanhoInputOriginal" value="errado">
-                    <label>B - Freyja, a deusa do amor, que traz felicidade aos guerreiros caídos</label>
+                    <label>B - Os hieróglifos eram utilizados apenas para a contabilidade e registros comerciais</label>
                     <input type="radio" name="questao9" class="tamanhoInputOriginal" value="certo">
-                    <label>C - Sigrdrífa, a valquíria que desperta o herói Sigurd e o ajuda em suas aventuras</label>
+                    <label>C - Os hieróglifos eram usados exclusivamente pelos faraós e sacerdotes para manter segredos</label>
                     <input type="radio" name="questao9" class="tamanhoInputOriginal" value="errado">
                     <label>D - Brynhild, a valquíria que cai em desgraça e é aprisionada em uma torre de fogo</label>
                     <div class="buttonResponder">
@@ -256,23 +255,18 @@
             <section id="secao-pergunta-10" class="secao-pergunta">
                 <div class="informacoes-questao">
                     <h1 class="questao">Pergunta 10:</h1>
-                    <p class="pergunta">Como a mitologia nórdica influenciou a cultura viking e suas crenças religiosas?
-                    </p>
+                    <p class="pergunta">Como a mitologia egípcia influenciou a sociedade e a religião no Antigo Egito?</p>
                     <p class="dificuldade">Nível difícil</p>
                 </div>
                 <div class="alternativas">
-                    <input type="radio" name="questao10" class="tamanhoInputOriginal" value="errado">
-                    <label>A - Os vikings rejeitaram completamente a mitologia nórdica em favor de outras
-                        crenças</label>
-                    <input type="radio" name="questao10" class="tamanhoInputOriginal" value="errado">
-                    <label>B - Os vikings abandonaram suas própriascrenças em favor do cristianismo e não foram
-                        influenciados pela mitologia</label>
                     <input type="radio" name="questao10" class="tamanhoInputOriginal" value="certo">
-                    <label>C - A mitologia nórdica inspirou a arte, a poesia e as sagas vikings, refletindo valores e
-                        crenças culturais</label>
+                    <label>A - A mitologia egípcia desempenhou um papel central na religião, na cultura e nas práticas funerárias do Antigo Egito</label>
                     <input type="radio" name="questao10" class="tamanhoInputOriginal" value="errado">
-                    <label>D - A mitologia nórdica não teve um impacto significativo na cultura viking; eles eram mais
-                        pragmáticos e guerreiros do que preocupados com a mitologia</label>
+                    <label>B - A mitologia egípcia era vista como mera ficção e não influenciou a vida cotidiana</label>
+                    <input type="radio" name="questao10" class="tamanhoInputOriginal" value="errado">
+                    <label>C - A mitologia egípcia foi esquecida e substituída por outras crenças muito antes do Antigo Egito</label>
+                    <input type="radio" name="questao10" class="tamanhoInputOriginal" value="errado">
+                    <label>D - A mitologia egípcia só ganhou importância muito depois do Antigo Egito</label>
                     <div class="buttonResponder">
                         <input type="button" value="Responder" id="btnPergunta10">
                     </div>
