--- a/front/site/paginas/hindu.html
+++ b/front/site/paginas/hindu.html
@@ -15,40 +15,24 @@
 <body>
 
   <header>
-    <a href="../paginas/index.php" id="logo"
-     ><img src="../../../back/imagens/LYJEK-teste.png" alt="" class="logo"
-     /></a>
-    <nav>
-      <ul class="lista-nav">
-        <li id="link-home"><a href="../paginas/index.php">HOME</a></li>
-        <li>
-          <a href="#">MITOLOGIAS <span id="seta-baixo">&darr;</span></a>
-          <ul class="dropdown">
-            <li id="margin-top-dropdown"><a href="egipcia.html">Egípcia</a></li>
-            <li class="link-dropdown" id="linkIrlandesa"><a href="irlandesa.html">Irlandesa</a></li>
-            <li class="link-dropdown" id="linkJaponesa"><a href="japonesa.html">Japonesa</a></li>
-            <li class="link-dropdown"id="linkGrecia"><a href="grega.html">Grega</a></li>
-            <li id="link-dropdown-excessao"><a href="mesopotamica.html">Mesopotâmica</a></li>
-            <li class="link-dropdown" id="linkNordica"><a href="nordica.html">Nórdica</a></li>
-            <li class="link-dropdown" id="linkRomana"><a href="romana.html">Romana</a></li>
+    <a href="../paginas/index.php" id="logo"><img src="../../../back/imagens/LYJEK.png" alt="" class="logo" /></a>
+      <nav>
+          <ul class="lista-nav">
+              <li id="link-home"><a href="../paginas/index.php">HOME</a></li>
+              <li>
+                  <a href="#">MITOLOGIAS <span id="seta-baixo">&darr;</span></a>
+                  <ul class="dropdown">
+                      <li id="margin-top-dropdown"><a href="egipcia.html">Egípcia</a></li>
+                      <li class="link-dropdown"id="linkGrecia"><a href="hindu.html">Grega</a></li>
+                      <li class="link-dropdown" id="linkIrlandesa"><a href="irlandesa.html">Irlandesa</a></li>
+                      <li class="link-dropdown" id="linkJaponesa"><a href="japonesa.html">Japonesa</a></li>
+                      <li id="link-dropdown-excessao"><a href="mesopotamica.html">Mesopotâmica</a></li>
+                      <li class="link-dropdown" id="linkNordica"><a href="nordica.html">Nórdica</a></li>
+                      <li class="link-dropdown" id="linkRomana"><a href="romana.html">Romana</a></li>
+                  </ul>
+              </li>
+              <li id="link-quiz"><a href="../quiz/grega.html">QUIZ GREGA</a></li>
           </ul>
-        </li>
-        <li id="link-quiz"><a href="../quiz/hindu.html">QUIZ HINDU</a></li>
-        <li id="link-home"><a href="../paginas/index.php">HOME</a></li>
-        <li>
-          <a href="#">MITOLOGIAS <span id="seta-baixo">&darr;</span></a>
-          <ul class="dropdown">
-            <li id="margin-top-dropdown"><a href="egipcia.html">Egípcia</a></li>
-            <li class="link-dropdown" id="linkIrlandesa"><a href="irlandesa.html">Irlandesa</a></li>
-            <li class="link-dropdown" id="linkJaponesa"><a href="japonesa.html">Japonesa</a></li>
-            <li class="link-dropdown"id="linkGrecia"><a href="grega.html">Grega</a></li>
-            <li id="link-dropdown-excessao"><a href="mesopotamica.html">Mesopotâmica</a></li>
-            <li class="link-dropdown" id="linkNordica"><a href="nordica.html">Nórdica</a></li>
-            <li class="link-dropdown" id="linkRomana"><a href="romana.html">Romana</a></li>
-          </ul>
-        </li>
-        <li id="link-quiz"><a href="../quiz/hindu.html">QUIZ HINDU</a></li>
-      </ul>
       </nav>
   </header>
 
