--- a/front/site/paginas/footer/contato.html
+++ b/front/site/paginas/footer/contato.html
@@ -146,9 +146,12 @@
       </div>
     </div>
   </main>
+  <div class="botao">
+    <a href="sobre.html"><input type="button" value="SOBRE NÓS" id="btnComecar" /></a>
+    <a href="politica-priv.html"><input type="button" value="POL. DE PRIVACIDADE" id="btnComecar" /></a>
+</div>
   <footer>
     <div class="footer-container">
-
         <div class="footer-links">
             <ul class="ul-footer">
                 <li><a href="../index.php">Página Inicial</a></li>
@@ -167,9 +170,9 @@
     <div class="footer-sociais">
         <img src="../../../../back/imagens/LYJEK(1).png" alt="">
         <div>
-            <a href="#">Política de privacidade</a>
-            <a href="../paginas/footer/contato.html">Contato</a>
-            <a href="#">Sobre</a>
+            <a href="politica-priv.html">Política de privacidade</a>
+            <a href="contato.html">Contato</a>
+            <a href="sobre.html">Sobre</a>
         </div>
         <img src="../../../back/imagens/ifmg-vertical-branca(1).png" alt="">
 
