--- a/front/site/paginas/footer/sobre.html
+++ b/front/site/paginas/footer/sobre.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="politica-priv.css">
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -31,7 +31,6 @@
                         <li class="link-dropdown" id="linkRomana"><a href="../romana.html">Romana</a></li>
                     </ul>
                 </li>
-                <li id="link-quiz"><a href="../quiz/egipcia.html">QUIZ EGÍPCIA</a></li>
             </ul>
         </nav>
     </header>
@@ -43,58 +42,38 @@
         <div class="col-7">
             <div class="container">
                 <section>
-                    <h1 class="h1-texto">Política de Privacidade</h1>
+                    <h1 class="h1-texto">Introdução</h1>
                 </section>
                 <section>
-                    <h2>1. Informações que Coletamos</h2>
-                    <p>Coletamos informações pessoais que você nos fornece voluntariamente ao utilizar nosso Site,
-                        interagir
-                        conosco ou utilizar nossos serviços.</p>
+                    <p>Olá, o nosso projeto consiste no desenvolvimento de uma aplicação web, que fornecerá conteúdos que envolvem as seguintes matérias: História, projeto integrador, desenvolvimento web e programação.</p>
                 </section>
                 <section>
-                    <h2>2. Como Usamos Suas Informações</h2>
-                    <p>Utilizamos suas informações pessoais para os seguintes propósitos: Estudos para o uso de provas e
-                        do
-                        ENEM
+                    <p>Nosso projeto contém: página de login (utilizando banco de dados para isso), um index que é para onde o usuário irá aprender mais sobre as mitologias e têm o quiz geral com as perguntas sobre todas as páginas e  em cada página  têm sobre as mitologias (deuses, principais mitos e histórias).
                     </p>
                 </section>
                 <section>
-                    <h2>3. Compartilhamento de Informações</h2>
-                    <p>Não compartilhamos suas informações pessoais com terceiros.</p>
+                    <p>Elaboramos este site pois não tínhamos visto nada parecido, com tantas mitologias, um quiz para cada e um quiz geral, e para o professor de história Ivan Furmann poder utilizar com seus alunos do primeiro ano. Assim, digo a vocês que o objetivo principal é promover a aprendizagem, testar o conhecimento dos usuários e oferecer uma plataforma educativa abrangente e envolvente. Com a combinação de disciplinas e a abordagem interativa do quiz, busca-se proporcionar uma experiência de aprendizado enriquecedora e estimulante para todos os interessados em explorar o mundo das mitologias e da História.
+                    </p>
                 </section>
                 <section>
-                    <h2>4. Cookies e Tecnologias Semelhantes</h2>
-                    <p>Utilizamos cookies e tecnologias semelhantes para coletar informações não pessoais sobre sua
-                        atividade no
-                        Site.</p>
+                    <p>Enfim, o que é mitologia e o que é um quiz: mitologia é um sistema de crenças composta por uma série de narrativas chamadas de mito. Essas histórias buscam explicar tudo o que existe e é importante para uma sociedade baseada na crença de um povo. Quiz: é o nome de um jogo de questionários que tem como objetivo fazer uma avaliação dos conhecimentos sobre determinado assunto.</p>
                 </section>
                 <section>
-                    <h2>5. Segurança das Informações</h2>
-                    <p>Implementamos medidas de segurança técnicas e organizacionais para proteger suas informações
-                        pessoais
-                        contra acesso não autorizado.</p>
+                    <p></p>
                 </section>
                 <section>
-                    <h2>6. Seus Direitos</h2>
-                    <p>Você tem direitos relacionados às suas informações pessoais, incluindo o direito de acessar,
-                        corrigir,
-                        excluir ou solicitar a portabilidade de seus dados.</p>
+                    <p></p>
                 </section>
                 <section>
-                    <h2>7. Alterações nesta Política de Privacidade</h2>
-                    <p>Reservamo-nos o direito de atualizar esta Política de Privacidade periodicamente. Quaisquer
-                        alterações
-                        significativas serão comunicadas através de nosso Site.</p>
+                    <p></p>
                 </section>
                 <section>
-                    <h2>8. Contato</h2>
-                    <p>Se você tiver dúvidas, preocupações ou solicitações relacionadas a esta Política de Privacidade,
-                        entre em
-                        contato conosco através da página de contato.
+                    <p>
                     <div class="botao">
                         <a href="contato.html"><input type="button" value="CONTATO" id="btnComecar" /></a>
-                        <a href="sobre.html"><input type="button" value="SOBRE NÓS" id="btnComecar" /></a>
-                    </div></p>
+                        <a href="politica-priv.html"><input type="button" value="POL. DE PRIVACIDADE" id="btnComecar" /></a>
+                    </div>
+                    </p>
                 </section>
             </div>
         </div>
