correcao-animation-hover

--- a/front/site/paginas/hindu.html
+++ b/front/site/paginas/hindu.html
@@ -299,6 +299,7 @@
         </li>
         <p>Em resumo, a mitologia hindu é um componente vital da cultura e da religião indianas, permeando a vida cotidiana, as artes, a filosofia e a espiritualidade. Ela continua a ser uma parte ativa e relevante da herança cultural da Índia e uma fonte de inspiração para muitos aspectos da vida moderna, tanto na Índia quanto em comunidades hindus em todo o mundo.</p>
       </ul>
+      <h3>Após ter estudado a mitologia grega, gostaria de iniciar o quiz?</h3>
       <div class="botao">
         <a href="../quiz/hindu.html"><input type="button" value="COMEÇAR" id="btnComecar"></a>
       </div>
