--- a/front/site/paginas/mesopotamica.html
+++ b/front/site/paginas/mesopotamica.html
@@ -25,10 +25,10 @@
                 <a href="#">MITOLOGIAS <span id="seta-baixo">&darr;</span></a>
                 <ul class="dropdown">
                     <li id="margin-top-dropdown"><a href="egipcia.html">Egípcia</a></li>
+                    <li id="linkGrecia"><a href="grega.html">Grega</a></li>
                     <li class="link-dropdown" id="linkIrlandesa"><a href="irlandesa.html">Irlandesa</a></li>
                     <li class="link-dropdown" id="linkJaponesa"><a href="japonesa.html">Japonesa</a></li>
                     <li class="link-dropdown"id="linkHindu"><a href="hindu.html">Hindu</a></li>
-                    <li id="link-dropdown-excessao"><a href="grega.html">Grega</a></li>
                     <li class="link-dropdown" id="linkNordica"><a href="nordica.html">Nórdica</a></li>
                     <li class="link-dropdown" id="linkRomana"><a href="romana.html">Romana</a></li>
                 </ul>
@@ -92,6 +92,7 @@
               </li>
               <p>Em resumo, a mitologia mesopotâmica teve um impacto significativo na religião, na literatura, na arte e na cultura da antiguidade. Suas histórias e deuses ainda são objetos de interesse acadêmico e cultural, fornecendo uma janela para as crenças e valores das civilizações mesopotâmicas e suas influências nas sociedades posteriores.</p>
             </ul>
+           <h3>Após ter estudado a mitologia grega, gostaria de iniciar o quiz?</h3> 
             <div class="botao">
               <a href="../quiz/mesopotamica.html"
                 ><input type="button" value="COMEÇAR" id="btnComecar"
