--- a/front/site/paginas/egipcia.html
+++ b/front/site/paginas/egipcia.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="../paginas/css/style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+  <script src="../quiz/js/animacoes.js" defer></script>
 </head>
 
 
@@ -24,9 +25,9 @@
                 <a href="#">MITOLOGIAS <span id="seta-baixo">&darr;</span></a>
                 <ul class="dropdown">
                     <li id="margin-top-dropdown"><a href="grega.html">Grega</a></li>
+                    <li class="link-dropdown"id="linkHindu"><a href="hindu.html">Hindu</a></li>
                     <li class="link-dropdown" id="linkIrlandesa"><a href="irlandesa.html">Irlandesa</a></li>
                     <li class="link-dropdown" id="linkJaponesa"><a href="japonesa.html">Japonesa</a></li>
-                    <li class="link-dropdown"id="linkHindu"><a href="hindu.html">Hindu</a></li>
                     <li id="link-dropdown-excessao"><a href="mesopotamica.html">Mesopotâmica</a></li>
                     <li class="link-dropdown" id="linkNordica"><a href="nordica.html">Nórdica</a></li>
                     <li class="link-dropdown" id="linkRomana"><a href="romana.html">Romana</a></li>
