colocando-perguntas-quiz

--- a/front/site/quiz/mesopotamica.html
+++ b/front/site/quiz/mesopotamica.html
@@ -47,25 +47,26 @@
             <section id="secao-pergunta-1">
                 <div class="informacoes-questao">
                     <h1 class="questao">Pergunta 1:</h1>
-                    <p class="pergunta">Quem é o deus supremo na mitologia mesopotâmica?</p>
+                    <p class="pergunta">Quem dos deuses é considerado “Deus(a) da Lua” na mitologia 
+                        mesopotâmica?</p>
                     <p class="dificuldade">Nível Fácil</p>
                 </div>
                 <div class="alternativas">
                     <div class="radio-container">
-                        <input type="radio" name="questao1" class="tamanhoInputOriginal" id="" value="certo">
+                        <input type="radio" name="questao1" class="tamanhoInputOriginal" id="" value="errado">
                         <label>A - Anu</label>
                     </div>
                     <div class="radio-container">
-                        <input type="radio" name="questao1" class="tamanhoInputOriginal" id="" value="errado">
-                        <label>B - Marduk</label>
+                        <input type="radio" name="questao1" class="tamanhoInputOriginal" id="" value="certo">
+                        <label>B - Sin</label>
                     </div>
                     <div class="radio-container">
                         <input type="radio" name="questao1" class="tamanhoInputOriginal" id="" value="errado">
-                        <label>C - Tiamat</label>
+                        <label>C - Ninhursag</label>
                     </div>
                     <div class="radio-container">
                         <input type="radio" name="questao1" class="tamanhoInputOriginal" id="" value="errado">
-                        <label>D - Ishtar</label>
+                        <label>D - Enki</label>
                     </div>
                     <div class="buttonResponder">
                         <input type="button" value="Responder" id="btnPergunta1">
@@ -119,25 +120,26 @@
             <section id="secao-pergunta-3">
                 <div class="informacoes-questao">
                     <h1 class="questao">Pergunta 3:</h1>
-                    <p class="pergunta">Que tipo de criatura alada comum na arte mesopotâmica protegia o trono dos deuses?</p>
+                    <p class="pergunta">Quem foi o lendário rei que governou a cidade de Uruk e é o protagonista de 
+                        uma das obras literárias mais antigas da humanidade?</p>
                     <p class="dificuldade">Nível Fácil</p>
                 </div>
                 <div class="alternativas">
                     <div class="radio-container">
                         <input type="radio" name="questao3" class="tamanhoInputOriginal" id="" value="errado">
-                        <label>A - Grifo</label>
-                    </div>
-                    <div class="radio-container">
-                        <input type="radio" name="questao3" class="tamanhoInputOriginal" id="" value="errado">
-                        <label>B - Sereia</label>
+                        <label>A - Enkidu</label>
                     </div>
                     <div class="radio-container">
                         <input type="radio" name="questao3" class="tamanhoInputOriginal" id="" value="certo">
-                        <label>C - Querubim</label>
+                        <label>B - Gilgamesh</label>
                     </div>
                     <div class="radio-container">
                         <input type="radio" name="questao3" class="tamanhoInputOriginal" id="" value="errado">
-                        <label> D - Fênix</label>
+                        <label>C - Inanna</label>
+                    </div>
+                    <div class="radio-container">
+                        <input type="radio" name="questao3" class="tamanhoInputOriginal" id="" value="errado">
+                        <label> D - Shtar</label>
                     </div>
                     <div class="buttonResponder">
                         <input type="button" value="Responder" id="btnPergunta3">
@@ -206,25 +208,25 @@
             <section id="secao-pergunta-6">
                 <div class="informacoes-questao">
                     <h1 class="questao">Pergunta 6:</h1>
-                    <p class="pergunta" id="ajustePergunta6">Qual é o monstro que representa o caos primordial na mitologia mesopotâmica?</p>
+                    <p class="pergunta" id="ajustePergunta6">Qual era o principal propósito da construção dos zigurates na antiga Mesopotâmia?</p>
                     <p class="dificuldade">Nível Médio</p>
                 </div>
                 <div class="alternativas">
                     <div class="radio-container">
-                        <input type="radio" name="questao6" class="tamanhoInputOriginal" id="" value="errado">
-                        <label> A - Lillu</label>
-                    </div>
-                    <div class="radio-container">
-                        <input type="radio" name="questao6" class="tamanhoInputOriginal" id="" value="errado">
-                        <label> B - Pazuzu</label>
-                    </div>
-                    <div class="radio-container">
                         <input type="radio" name="questao6" class="tamanhoInputOriginal" id="" value="certo">
-                        <label> C - Tiamat</label>
+                        <label>A - Templos religiosos e centros cerimoniais</label>
                     </div>
                     <div class="radio-container">
                         <input type="radio" name="questao6" class="tamanhoInputOriginal" id="" value="errado">
-                        <label> D - Huwawa</label>
+                        <label>B- Residências para a nobreza</label>
+                    </div>
+                    <div class="radio-container">
+                        <input type="radio" name="questao6" class="tamanhoInputOriginal" id="" value="errado">
+                        <label>C- Escolas de filosofia</label>
+                    </div>
+                    <div class="radio-container">
+                        <input type="radio" name="questao6" class="tamanhoInputOriginal" id="" value="errado">
+                        <label>D- Estações de comércio e troca</label>
                     </div>
             
                     <div class="buttonResponder">
@@ -235,25 +237,29 @@
             <section id="secao-pergunta-7">
                 <div class="informacoes-questao">
                     <h1 class="questao">Pergunta 7:</h1>
-                    <p class="pergunta" id="ajustePergunta7">Qual é o nome da famosa obra literária que contém uma versão da história do Dilúvio na mitologia mesopotâmica?</p>
+                    <p class="pergunta" id="ajustePergunta7">Qual foi o papel do deus Enki (também conhecido como Ea) na mitologia mesopotâmica e como suas ações afetaram a humanidade?</p>
                     <p class="dificuldade">Nível Difícil</p>
                 </div>
                 <div class="alternativas">
                     <div class="radio-container">
                         <input type="radio" name="questao7" class="tamanhoInputOriginal" id="" value="errado">
-                        <label> A - Eneida</label>
-                    </div>
-                    <div class="radio-container">
-                        <input type="radio" name="questao7" class="tamanhoInputOriginal" id="" value="errado">
-                        <label> B - Epopeia de Enuma Elish</label>
-                    </div>
-                    <div class="radio-container">
-                        <input type="radio" name="questao7" class="tamanhoInputOriginal" id="" value="errado">
-                        <label> C - Ilíada</label>
+                        <label>A - Ea era o deus da guerra e liderou exércitos divinos contra os deuses rebeldes, 
+                        garantindo a segurança da humanidade.</label>
                     </div>
                     <div class="radio-container">
                         <input type="radio" name="questao7" class="tamanhoInputOriginal" id="" value="certo">
-                        <label> D - Epopeia de Atrahasis</label>
+                        <label>B - Ele era o deus da sabedoria e conhecimento, e muitas vezes interveio para 
+                        proteger e aconselhar os humanos.</label>
+                    </div>
+                    <div class="radio-container">
+                        <input type="radio" name="questao7" class="tamanhoInputOriginal" id="" value="errado">
+                        <label>C - Ea era o governante supremo dos deuses e exercia controle absoluto sobre a vida 
+                        e a morte dos mortais.</label>
+                    </div>
+                    <div class="radio-container">
+                        <input type="radio" name="questao7" class="tamanhoInputOriginal" id="" value="errado">
+                        <label>D - Ele era o deus das artes e inspirava os humanos a criar obras de arte e literatura 
+                        para celebrar os deuses.</label>
                     </div>
             
                     <div class="buttonResponder">
