--- a/front/site/quiz/grega.html
+++ b/front/site/quiz/grega.html
@@ -1,4 +1,4 @@
-<?php
+<!-- <?php
 if (!isset($_SESSION)) {
     session_start();
 }
@@ -31,9 +31,7 @@ if (isset($_POST['submit'])) {
 
     $resultado = mysqli_query($conexao, $inserirDados);
 }
-
-
-?>
+?>-->
 
 <!DOCTYPE html>
 <html lang="pt-BR">
@@ -185,28 +183,29 @@ if (isset($_POST['submit'])) {
             <section id="secao-pergunta-3">
                 <div class="informacoes-questao">
                     <h1 class="questao">Pergunta 3:</h1>
-                    <p class="pergunta">Qual é o nome do herói grego conhecido por sua força extraordinária e seus Doze Trabalhos?</p>
+                    <p class="pergunta">Além de ser o deus dos mares, Poseidon também era frequentemente 
+                    considerado como o deus de qual outro fenômeno natural na mitologia grega?</p>
                     <p class="dificuldade">Nível Fácil</p>
                 </div>
                 <div class="alternativas">
                     <div class="radio-container">
-                        <input type="radio" name="questao3" class="tamanhoInputOriginal" id="" value="errado">
-                        <label>A - Perseu</label>
-                    </div>
-
-                    <div class="radio-container">
-                        <input type="radio" name="questao3" class="tamanhoInputOriginal" id="" value="errado">
-                        <label>B - Teseu</label>
-                    </div>
-
-                    <div class="radio-container">
-                        <input type="radio" name="questao3" class="tamanhoInputOriginal" id="" value="errado">
-                        <label>C - Édipo</label>
-                    </div>
-
-                    <div class="radio-container">
                         <input type="radio" name="questao3" class="tamanhoInputOriginal" id="" value="certo">
-                        <label> D - Hércules</label>
+                        <label>A - Terremotos</label>
+                    </div>
+
+                    <div class="radio-container">
+                        <input type="radio" name="questao3" class="tamanhoInputOriginal" id="" value="errado">
+                        <label>B - Tempestades</label>
+                    </div>
+
+                    <div class="radio-container">
+                        <input type="radio" name="questao3" class="tamanhoInputOriginal" id="" value="errado">
+                        <label>C - Vulcões</label>
+                    </div>
+
+                    <div class="radio-container">
+                        <input type="radio" name="questao3" class="tamanhoInputOriginal" id="" value="errado">
+                        <label>D - Furacões</label>
                     </div>
 
                     <div class="buttonResponder">
@@ -218,18 +217,29 @@ if (isset($_POST['submit'])) {
             <section id="secao-pergunta-4">
                 <div class="informacoes-questao">
                     <h1 class="questao">Pergunta 4:</h1>
-                    <p class="pergunta">Explique o mito da criação do mundo na mitologia grega, incluindo os titãs e os deuses olímpicos.</p>
+                    <p class="pergunta">Quais eram os três irmãos primordiais que personificavam as forças básicas 
+                    da natureza na mitologia grega, sendo considerados filhos de Gaia?</p>
                     <p class="dificuldade">Nível Médio</p>
                 </div>
                 <div class="alternativas">
                     <div class="radio-container">
-                        <input type="radio" name="questao4" class="tamanhoInputOriginal" id="" value="errado">
-                        <label>Na mitologia grega, o mundo foi criado por um único deus, Zeus.</label>
+                        <input type="radio" name="questao4" class="tamanhoInputOriginal" id="" value="certo">
+                        <label>A - Urano, Cronos e Oceano</label>
                     </div>
 
                     <div class="radio-container">
-                        <input type="radio" name="questao4" class="tamanhoInputOriginal" value="certo">
-                        <label>Na mitologia grega, o mundo começou com o Caos, seguido pelos titãs, que foram sucedidos pelos deuses olímpicos, liderados por Zeus.</label>
+                        <input type="radio" name="questao4" class="tamanhoInputOriginal" value="errado">
+                        <label>B - Zeus, Poseidon e Hades</label>
+                    </div>
+
+                    <div class="radio-container">
+                        <input type="radio" name="questao4" class="tamanhoInputOriginal" value="errado">
+                        <label>C - Tártaro, Érebo e Nix</label>
+                    </div>
+
+                    <div class="radio-container">
+                        <input type="radio" name="questao4" class="tamanhoInputOriginal" value="errado">
+                        <label>D - Ponto, Céu e Terra</label>
                     </div>
 
                     <div class="buttonResponder">
@@ -241,23 +251,34 @@ if (isset($_POST['submit'])) {
             <section id="secao-pergunta-5">
                 <div class="informacoes-questao">
                     <h1 class="questao">Pergunta 5:</h1>
-                    <p class="pergunta">Qual é a história do mito de Prometeu e por que ele é castigado por Zeus?</p>
+                    <p class="pergunta">Além de Ícaro, Dédalo também teve outro filho notável na mitologia grega. 
+                    Qual era o nome deste filho e qual foi sua trágica história?</p>
                     <p class="dificuldade">Nível Médio</p>
                 </div>
                 <div class="alternativas">
                     <div class="radio-container">
                         <input type="radio" name="questao5" class="tamanhoInputOriginal" id="" value="errado">
-                        <label>Prometeu não é uma figura mitológica grega.</label>
+                        <label>A - Talos, o autômato de bronze que guardava Creta e que foi derrotado por Jasão e os 
+                        Argonautas.</label>
                     </div>
 
                     <div class="radio-container">
                         <input type="radio" name="questao5" class="tamanhoInputOriginal" id="" value="errado">
-                        <label>Prometeu é recompensado por Zeus por seus serviços à humanidade.</label>
+                        <label>B - Ífis, uma jovem que se disfarçou de homem para escapar de um destino trágico e 
+                        posteriormente foi transformada em uma estátua de pedra por Cibele.</label>
                     </div>
 
                     <div class="radio-container">
                         <input type="radio" name="questao5" class="tamanhoInputOriginal" value="certo">
-                        <label>Prometeu rouba o fogo dos deuses para dar aos humanos, o que enfurece Zeus, levando-o a punir Prometeu de maneira terrível.</label>
+                        <label>C - Perdix, que Dédalo empurrou do alto da Acrópole de Atenas por ciúmes de 
+                        sua inteligência e foi transformado em uma perdiz por Atena.</label>
+                    </div>
+
+                    <div class="radio-container">
+                        <input type="radio" name="questao5" class="tamanhoInputOriginal" value="errado">
+                        <label>D - Glauco, um pescador que se tornou um deus marinho após comer uma erva
+                        mágica dada a ele por Circe.6-Quem são os principais deuses do Olimpo na mitologia 
+                        grega e quais são suas áreas de domínio?</label>
                     </div>
 
                     <div class="buttonResponder">
@@ -269,18 +290,30 @@ if (isset($_POST['submit'])) {
             <section id="secao-pergunta-6">
                 <div class="informacoes-questao">
                     <h1 class="questao">Pergunta 6:</h1>
-                    <p class="pergunta">Quem são os principais deuses do Olimpo na mitologia grega e quais são suas áreas de domínio?</p>
+                    <p class="pergunta">Glauco, um pescador que se tornou um deus marinho após comer uma erva 
+                    mágica dada a ele por Circe.6-Quem são os principais deuses do Olimpo na mitologia 
+                    grega e quais são suas áreas de domínio?</p>
                     <p class="dificuldade">Nível Médio</p>
                 </div>
                 <div class="alternativas">
                     <div class="radio-container">
-                        <input type="radio" name="questao6" class="tamanhoInputOriginal" id="" value="errado">
-                        <label>Os principais deuses do Olimpo são Hades, Poseidon e Afrodite, que governam sobre a morte, o mar e o amor, respectivamente.</label>
+                        <input type="radio" name="questao6" class="tamanhoInputOriginal" id="" value="certo">
+                        <label>A - Colheita</label>
                     </div>
 
                     <div class="radio-container">
-                        <input type="radio" name="questao6" class="tamanhoInputOriginal" id="" value="certo">
-                        <label>Os principais deuses do Olimpo são Zeus (deus dos céus e rei dos deuses), Hera (deusa do casamento e da família), Atena (deusa da sabedoria e da estratégia), Apolo (deus das artes e da música) e muitos outros, cada um com áreas de domínio específicas.</label>
+                        <input type="radio" name="questao6" class="tamanhoInputOriginal" id="" value="errado">
+                        <label>B - Guerra</label>
+                    </div>
+
+                    <div class="radio-container">
+                        <input type="radio" name="questao6" class="tamanhoInputOriginal" id="" value="errado">
+                        <label>C - Comércio</label>
+                    </div>
+
+                    <div class="radio-container">
+                        <input type="radio" name="questao6" class="tamanhoInputOriginal" id="" value="errado">
+                        <label>D - Cura</label>
                     </div>
 
                     <div class="buttonResponder">
@@ -298,7 +331,7 @@ if (isset($_POST['submit'])) {
                 <div class="alternativas">
                     <div class="radio-container">
                         <input type="radio" name="questao7" class="tamanhoInputOriginal" id="" value="errado">
-                        <label>Ícaro não é uma figura mitológica grega.</label>
+                        <label>A - Qual é a história da Titanomaquia na mitologia grega e como os deuses olímpicos derrotaram os titãs?</label>
                     </div>
 
                     <div class="radio-container">
