--- a/front/site/paginas/grega.html
+++ b/front/site/paginas/grega.html
@@ -30,7 +30,7 @@
                       <li class="link-dropdown" id="linkRomana"><a href="romana.html">Romana</a></li>
                   </ul>
               </li>
-              <li id="link-quiz"><a href="../quiz/grega.html">QUIZ GREGA</a></li>
+              <li id="link-quiz"><a href="../quiz/grega.php">QUIZ GREGA</a></li>
           </ul>
       </nav>
   </header>
