--- a/front/site/paginas/nordica.html
+++ b/front/site/paginas/nordica.html
@@ -26,7 +26,7 @@
             <li class="link-dropdown" id="linkJaponesa"><a href="japonesa.html">Japonesa</a></li>
             <li class="link-dropdown" id="linkHindu"><a href="hindu.html">Hindu</a></li>
             <li id="link-dropdown-excessao"><a href="mesopotamica.html">Mesopotâmica</a></li>
-            <li class="link-dropdown" id="linkNordica"><a href="nordica.html">Nórdica</a></li>
+            <li class="link-dropdown" id="linkRomana"><a href="romana.html">Romana</a></li>
             <li class="link-dropdown" id="linkGrecia"><a href="grega.html">Grega</a></li>
           </ul>
         </li>
