Todas as fotos adicionadas

--- a/front/site/paginas/grega.html
+++ b/front/site/paginas/grega.html
@@ -110,13 +110,25 @@
           marcada por ter nascido ao sair da cabeça de seu pai. Diversos mitos gregos narram suas histórias, sendo que
           ela participou ativamente da Guerra de Tróia e apoiou Herácles e Perseu em suas aventuras.
         </li>
+
+        <img src="../../../back/imagens/grega/Pallas_Athena_standing_on_a_globe,_holding_a_spear_in_her_left_hand_and_her_shield_in_her_right.jpg" alt="">
+
         <li><strong>Afrodite:</strong> foi uma divindade presente na religiosidade dos gregos antigos reconhecida como a deusa do amor, da beleza, do desejo e da fertilidade. Os gregos acreditavam que ela teria nascido no Chipre, e seu nascimento recebeu duas versões, uma de Hesíodo e outra de Homero. Os historiadores afirmam que o culto a essa deusa fora introduzido na Grécia por influência de Astarte, deusa fenícia.
         O culto a Afrodite tinha forte relação com a fertilidade e a sexualidade, e ela era tida como a deusa grega mais bela de todas. Na mitologia grega, era casada com Hefesto, mas infeliz no casamento e constantemente traía seu marido. Seu culto se centralizava no Chipre, com destaque para a cidade de Pafos.
         </li>
+
+        <img src="../../../back/imagens/grega/Statue_of_Aphrodite_-_Ny_Carlsberg_Glyptotek,_Copenhagen,_20220618_1057_7036.jpg" alt="">
+
         <li><strong>Hades:</strong> era um dos deuses da mitologia grega, conhecido como o deus do submundo, o lugar para onde vão as almas dos mortos. Era irmão de Zeus e tomou parte na rebelião contra Cronos, o titã que devorava seus filhos. Casou-se com Perséfone, deusa sequestrada e levada para o submundo com ele. O submundo era protegido por Cérbero.</li>
+
+        <img src="../../../back/imagens/grega/640px-thumbnail.jpg" alt="">
+
         <li><strong>Poseidon:</strong> era um dos mais importantes deuses presentes na religiosidade dos gregos antigos. Os gregos o consideravam o deus dos mares e dos rios e responsável por terremotos, enchentes e tempestades. Era o patrono dos marinheiros e dos cavalos e o criador desses animais na mitologia.
         Os historiadores afirmam que, durante o período Pré-Homérico, o culto a Poseidon já era consolidado em diversas partes da Grécia. Na mitologia, Poseidon era filho de Cronos e Reia e irmão de Zeus. Tornou-se o senhor das águas depois que os deuses gregos derrotaram os titãs e os gigantes em duas guerras.
         </li>
+
+        <img src="../../../back/imagens/grega/Poseidon_sculpture_Copenhagen_2005.jpg" alt="">
+
       </ul>
       <h3>Mitos:</h3>
       <h4>Ícaro e Dédalo:</h4>
@@ -125,9 +137,15 @@
       <p>Para conseguirem fugir, ele teve a ideia de construir asas feitas com penas de gaivotas coladas com cera de abelhas. E, como era um grande inventor, suas asas realmente funcionaram e os dois saíram voando do labirinto e fugiram de Creta.</p>
       <p>Porém, ao sentir-se livre como um pássaro, voando pelos céus, Ícaro pensou que era tão poderoso quanto um deus e voou cada vez mais alto, sem ouvir os conselhos de seu pai, que alertava para o perigo de um voo tão ousado.</p>
       <p>O castigo pela ousadia não demorou. Pouco a pouco, o calor do sol foi derretendo a cera e descolando as penas, desfazendo as asas. Sem poder ajudar o filho, Dédalo assistiu horrorizado enquanto Ícaro despencava das alturas até cair no mar Egeu, onde acabou se afogando.</p>
+
+      <img src="../../../back/imagens/grega/Daedalus_&_Icarus_by_Durer_2.jpg" alt="">
+
       <h4>Jasão e os argonautas:</h4>
       <p>Jasão era filho do rei Éson, da cidade de Iolco. Pélias, irmão de Éson, usurpou o trono e obrigou Jasão e sua mãe a fugirem. Jasão retornou a Iolco depois de adulto e reivindicou o trono de seu pai. Pélias concordou desde que Jasão fosse buscar o velo de ouro, que estava escondido em uma árvore na Cólquida.</p>
       <p>Jasão construiu então um navio, que chamou de Argos, e reuniu uma tripulação de 50 homens que partiram para a Cólquida. Entre os tripulantes estavam Peleu, pai de Aquiles, o médico Asclépio e o poeta Orfeu.</p>
+
+      <img src="../../../back/imagens/grega/Jason,_from_'Game_of_Mythology'_(Jeu_de_la_Mythologie)_MET_DP817651.jpg" alt="">
+
       <p>Durante a viagem, Jasão e os argonautas enfrentaram muitos perigos. Para entrar no Mar Negro, precisavam passar pelas simplégades, enormes pedras que se fechavam se um navio tentasse passar por elas. Para vencer esse obstáculo, Jasão soltou uma pomba, que passou rapidamente pelas simplégades. Por pouco, a ave não foi esmagada pelas pedras. No momento em que as simplégades recuavam, o Argos passou rapidamente.</p>
       <p>Para chegar até o bosque onde estava a árvore com o velo de ouro, Jasão deveria matar um dragão e semear um campo com seus dentes. Quando os dentes fossem semeados, de cada um deles sairia um soldado armado. Com a ajuda da bruxa Medéia, Jasão tornou-se invulnerável ao fogo do dragão. Matou-o e semeou os dentes. Quando os soldados surgiram da terra, Jasão escondeu-se e jogou uma pedra em um deles. Sem saber de onde ela tinha saído, os soldados engalfinharam-se e mataram-se uns aos outros.</p>
       <p>Cumprindo a promessa que fizera a Medeia, Jasão casou-se com ela e apoderou-se do velo de ouro.
