--- a/front/site/paginas/japonesa.html
+++ b/front/site/paginas/japonesa.html
@@ -219,7 +219,7 @@
       <p><b>Hotei:</b> Também conhecido como "Buda Sorridente", é associado à generosidade e à abundância. É frequentemente representado como um homem barrigudo, sorrindo e carregando um saco de presentes.</p>
 
       <p><b>Jurojin:</b> Representa a longevidade e a boa saúde. É frequentemente representado como um homem idoso com uma barba longa.</p>
-        <img src="../paginas/imagens/shichi.jpg" alt="">
+        <img src="../../../back/imagens/japonesa/Seven_Lucky_Gods_(Shichi_fukujin)_in_Treasure_Ship_by_Utagawa_Toyokuni_I_c1806.png" alt="">
       <h2>Influência</h2>
       <ul>
         <li><strong>Religião Xintoísta:</strong> A mitologia japonesa é intrinsecamente ligada ao xintoísmo, a religião indígena do Japão. Deuses e espíritos da mitologia desempenham papéis centrais no panteão xintoísta. Os santuários xintoístas são dedicados a várias divindades e são locais de adoração e rituais que celebram a natureza e a espiritualidade.
