--- a/front/site/paginas/egipcia.html
+++ b/front/site/paginas/egipcia.html
@@ -184,9 +184,7 @@
           <b>Anúbis:</b> filho de Osíris e Néftis, Anúbis é o deus dos mortos e
           do submundo, era ele que guiava os mortos após sua morte.
         </li>
-
-        <img src="../../../back/imagens/egipcia/Krewe_of_Proteus,_1882_-_costume_-_Anubis.png" alt="">
-
+        <img src="" alt="">
         <li>
           <b>Anuket (ou Anukis):</b> deusa da fertilidade a qual estava
           relacionada com a água
@@ -229,6 +227,9 @@
         </p>
         <h2>Osíris</h2>
         <p>Osíris é uma divindade que fez parte da religiosidade e da mitologia dos egípcios na Antiguidade. Com o passar do tempo, seu culto foi ganhando relevância, e os atributos relacionados com esse deus foram se modificando. Inicialmente, era considerado um deus da fertilidade, mas, com o tempo, foi vinculado à morte e à vida após a morte.</p>
+
+        <img src="../../../back/imagens/egipcia/The_Sacred_Books_and_Early_Literature_of_the_East.jpg" alt="">
+
         <p>Nesse último atributo, Osíris era considerado o senhor do mundo dos mortos, aquele que reinava nesse domínio, sendo também quem conduzia o julgamento de todos os que morriam. Esse julgamento determinava o destino de cada pessoa na vida após a morte e baseava-se nas ações da pessoa em vida.</p>
         <p>Era muito comum nas representações egípcias que Osíris fosse apresentado como um deus mumificado (existe um mito egípcio que narra a sua mumificação). Essa representação reforça os laços desse deus com a crença dos egípcios na vida após a morte e com a importância da mumificação e dos ritos funerários para esse povo.
         </p>
@@ -256,11 +257,15 @@
         </p>
         <p>Com a popularização de Osíris, Anúbis foi colocado como uma espécie de auxiliar daquele, passando a proteger os túmulos e guiar os mortos na vida após a morte. Era ainda um dos deuses que participavam do Tribunal de Osíris, que julgava os mortos por suas ações, e também atuava na balança deste tribunal.
         </p>
+        <img src="../../../back/imagens/egipcia/Krewe_of_Proteus,_1882_-_costume_-_Anubis.png" alt="">
         <p>Essa balança era determinante para o destino dos mortos: se eles gozariam da vida após a morte ou se seriam devorados por um monstro. Nessa balança, o coração do morto era pesado com uma pena, e, caso fosse mais leve, a morto poderia gozar da vida após a morte. Esse mito trazia o coração como símbolo das ações da pessoa em vida e a pena como símbolo do conceito de justiça para os egípcios.</p>
         <p>Vimos que a popularização de Osíris fez com que Anúbis passasse a ser visto como seu filho. O mito do seu nascimento se iniciava com uma artimanha de Néftis, deusa da noite. Ela tinha interesse em Osíris, pois o achava muito bonito. Assim, ela se disfarçou de Ísis, a esposa de Osíris, e o seduziu.
         </p>
         <p>Néftis engravidou depois de se relacionar com Osíris, e, para evitar que seu marido, Set, descobrisse sua traição, decidiu abandonar a criança. Essa criança era Anúbis, que foi adotado por Ísis quando essa deusa descobriu o que havia acontecido. Eventualmente, Set também descobriu o que aconteceu e vingou-se assassinando Osíris.
         </p>
+
+
+
 
         <h2>Influência</h2>
         <ul>
@@ -282,6 +287,7 @@
           <li><strongTurismo e Promoção Cultural:></strongTurismo> Os locais históricos e monumentos associados à mitologia egípcia, como as pirâmides, os templos e o Vale dos Reis, atraem turistas de todo o mundo, promovendo a cultura e o patrimônio egípcios.
           </li>
         </ul>
+        <p>Em resumo, a mitologia egípcia desempenhou um papel central na civilização egípcia antiga e continua a ser uma parte importante da cultura e do patrimônio egípcios. Sua influência é evidente em muitos aspectos da sociedade egípcia e ainda é estudada e apreciada em todo o mundo.</p>
         <h3>Após ter estudado a mitologia egípcia, gostaria de iniciar o quiz?</h3>
         <div class="botao">
           <a href="../quiz/egipcia.html"
@@ -311,7 +317,6 @@
             <li><a href="../paginas/romana.html">Mitologia Romana</a></li>
           </ul>
         </div>
-        <p>Em resumo, a mitologia egípcia desempenhou um papel central na civilização egípcia antiga e continua a ser uma parte importante da cultura e do patrimônio egípcios. Sua influência é evidente em muitos aspectos da sociedade egípcia e ainda é estudada e apreciada em todo o mundo.</p>
       </div>
       <div class="footer-sociais" >
         <img src="../../../back/imagens/LYJEK(1).png" alt="">
