--- a/front/site/paginas/romana.html
+++ b/front/site/paginas/romana.html
@@ -57,6 +57,7 @@
         <p>Nessa época, a vida dos romanos estava intimamente relacionada com a religião e, portanto, com os deuses do panteão romano.</p>
         <p>Eram eles que favoreciam as colheitas, a saúde, a proteção, a harmonia e a prosperidade entre os homens.</p>
 
+        <img src="../../../back/imagens/romana/Marcus_Aurelius_showing_sacrifice_-_Arch_of_Marcus_Aurelius_-_Musei_Capitolini_-_Rome_2016.jpg" alt="">
         
 
         <figure>
@@ -87,6 +88,9 @@
           <li><strong>Fortuna:</strong> deusa do acaso, da sorte e da esperança.</li>
           <li><strong>Fama:</strong> deusa da poesia e mensageira de Júpiter.</li>
         </ul>
+
+        <img src="../../../back/imagens/romana/group-of-gods-mount-olympus.webp" alt="">
+
         <h3>Mitos:</h3>
         <h4>Rômulo e remo:</h4>
         <img src="../../../back/imagens/romana/1875_ Rómulo_y_Remo _(3479133155).jpg" alt="">
@@ -95,13 +99,15 @@
         <p>À medida que se tornaram adultos, envolveram-se em uma discussão entre os partidários de Amulius e Numitor. Como conseqüência, Remus foi preso em Alba Longa, o mesmo lugar onde ele nasceu. O rei e o avô de Remus suspeitavam de sua verdadeira identidade. Enquanto isso, Romulus estava ocupado procurando maneiras de libertar seu irmão. Enquanto tudo isso acontecia, ambos ficaram sabendo de sua verdadeira identidade e uniram forças com seu avô para restaurar o trono. Finalmente, eles venceram e Amulius foi morto.</p>
         <p>Quando eles voltaram para as sete colinas, eles foram envolvidos em uma discussão sobre onde construir a cidade. Romulus preferia o Monte Palatino, mas Remus queria que estivesse no Monte Aventino. Como não conseguiram chegar a um acordo, pediram aos deuses que ajudassem usando o augúrio ou a interpretação dos presságios. Romulus viu 12 aves auspiciosas e reivindicou uma vitória, já que Remus só viu seis. Isso deu origem a uma nova disputa e, eventualmente, Remus foi morto. Romulus então fundou a cidade de Roma.</p>
         <h4>Júpiter e a abelha</h4>
+        <img src="../../../back/imagens/romana/jupiterAndBee.jpeg" alt="">
         <p>Lendas romanas sempre foram bem sucedidas em ensinar lições de vida. Um desses mitos de doçura e vingança é o mito de Júpiter e a abelha. A história mostra a moral de como a vingança pode ter consequências terríveis.</p>
         <p>Um belo dia depois de ter sido irritado pelos mortais levando seu mel, a rainha da colméia decidiu visitar Júpiter. Depois de alcançar o Olimpo, ela ofereceu mel fresco para Júpiter. Encantada com o gosto, Júpiter prometeu cumprir um de seus desejos. Ela perguntou: “Dê-me, peço-te, uma picada, que se qualquer mortal se aproxima para levar o meu mel, eu posso matá-lo.” Desagradada por seu pedido por causa de seu amor pela raça humana ele concedeu seu desejo, mas no risco de sua própria vida. Ele disse: “Pois se você usar sua picada, ela permanecerá na ferida que você faz, e então você morrerá com a perda dela.”</p>
         <p>A moral da história é estar contente com o que você tem. Desejar o bem para si mesmo a um custo para os outros sempre levou à queda. Ainda hoje, se uma abelha usar sua picada, resultará em sua própria morte.</p>
 
-        <img src="../../../back/imagens/romana/Plate_141-_The_Immortalization_of_Aeneas_(AEneas_Humitio_flumine_ablutus_in_Indigitem),_from_Ovid's_'Metamorphoses'_MET_DP864232.jpg" alt="">
 
         <h4>História de Enéias</h4>
+        <img src="../../../back/imagens/romana/Plate_141-_The_Immortalization_of_Aeneas_(AEneas_Humitio_flumine_ablutus_in_Indigitem),_from_Ovid's_'Metamorphoses'_MET_DP864232.jpg" alt="">
+
         <p>Enéias é o herói mitológico de Roma e Tróia. Homer menciona-o na como primo em primeiro grau do rei Príamo de Tróia. Na Eneida, Virgílio descreve-o como um herói e o ancestral de Romulus e Remus. A Eneida conta que Enéias era um dos poucos troianos que não foram mortos nem escravizados depois que Tróia foi derrotado. Depois de reunir um grupo e ser comandado pelos deuses para fugir, ele viajou para a Itália para se tornar o progenitor dos romanos. Essa equipe foi chamada de Aeneads. Ele levou consigo as estátuas de deuses troianos e as plantou na Itália. Eles vagaram por seis anos e finalmente se estabeleceram em Cartago. Aqui, Enéias e a rainha de Cartago, Dido, tiveram um caso de amor de um ano após o qual Dido propôs a ele para que eles pudessem reinar sobre os troianos e os cartagineses juntos. Afrodite (a versão romana de Vênus e a mãe de Enéias), com a ajuda de Júpiter, fez Enéias perceber seus verdadeiros motivos que o levaram a deixar o lugar secretamente. A dor de sua partida levou Dido a proferir uma maldição de inimizade sobre Roma. Depois, ela se apunhalou com a espada que havia dado a Aeneas durante o primeiro encontro deles.</p>
         <p>Os Aeneads então retornaram à Sicília e Aeneas fez seu assentamento final no Lácio. Para homenagear seu pai, que morreu um ano antes, Aeneas organizou uma série de jogos fúnebres. Após a sua própria morte, ele desceu ao submundo e conheceu seu pai e Dido e aprendeu sobre o futuro de seus sucessores, em outras palavras, a história romana. Esta história sobre a ancestralidade dos romanos através dos troianos via Enéas e as terras que ele fundou é considerada com grande respeito pelos historiadores.</p>
         <h3>Influência dos gregos</h3>
