--- a/front/site/paginas/irlandesa.html
+++ b/front/site/paginas/irlandesa.html
@@ -24,7 +24,7 @@
                 <li id="margin-top-dropdown"><a href="egipcia.html">Egípcia</a></li>
                 <li class="link-dropdown" id="linkGrecia"><a href="grega.html">Grega</a></li>
                 <li class="link-dropdown"id="linkHindu"><a href="hindu.html">Hindu</a></li>
-                <li class="link-dropdown" id="linkIrlandesa"><a href="irlandesa.php">Irlandesa</a></li>
+                <li class="link-dropdown" id="linkIrlandesa"><a href="irlandesa.html">Irlandesa</a></li>
                 <li id="link-dropdown-excessao"><a href="mesopotamica.html">Mesopotâmica</a></li>
                 <li class="link-dropdown" id="linkNordica"><a href="nordica.html">Nórdica</a></li>
                 <li class="link-dropdown" id="linkRomana"><a href="romana.html">Romana</a></li>
