--- a/front/site/paginas/footer/contato.html
+++ b/front/site/paginas/footer/contato.html
@@ -168,7 +168,7 @@
         <img src="../../../../back/imagens/LYJEK(1).png" alt="">
         <div>
             <a href="#">Política de privacidade</a>
-            <a href="../paginas/footer/contato.html">Contato</a>
+            <a href="../footer/contato.html">Contato</a>
             <a href="#">Sobre</a>
         </div>
         <img src="../../../back/imagens/ifmg-vertical-branca(1).png" alt="">
