mais bugs corrigidos

--- a/front/site/paginas/footer/contato.html
+++ b/front/site/paginas/footer/contato.html
@@ -87,7 +87,7 @@
         <p>lucasdiniz1708@gmail.com</p>
         <p class="description">
           Atuou como desenvolvedor front-end das páginas do site. Utilizando HTML e CSS. Teve participação na elaboração
-          de perguntas para o quiz.
+          de perguntas para o quiz. Responsabilizou-se também na procura das imagens presentes no material de estudo.
         </p>
         <div class="language-icon">
           <img src="../imagens/icons/800px-HTML5_Badge.svg.png" alt="">
