adicionado-link-e-hover-sair

--- a/front/site/quiz/grega.html
+++ b/front/site/quiz/grega.html
@@ -74,7 +74,7 @@ if (isset($_POST['submit'])) {
                     </ul>
                 </li>
                 <li id="link-mitologia"><a href="../paginas/grega.html">MITOLOGIA GREGA</a></li>
-                <li><a href="../../../back/logout.php">SAIR</a></li>
+                <li id="link-sair"><a href="../../../back/logout.php">SAIR</a></li>
             </ul>
         </nav>
     </header>
