--- a/front/site/quiz/nordica.html
+++ b/front/site/quiz/nordica.html
@@ -27,6 +27,7 @@
                     </ul>
                 </li>
                 <li id="link-mitologia"><a href="../paginas/romana.html">MITOLOGIA NÓRDICA</a></li>
+                <li id="link-sair"><a href="../../../back/logout.php">SAIR</a></li>
             </ul>
         </nav>
     </header>
