--- a/front/site/quiz/romana.html
+++ b/front/site/quiz/romana.html
@@ -24,6 +24,7 @@
                         <li id="link-dropdown-excessao"><a href="mesopotamica.html">Mesopotâmica</a></li>
                         <li class="link-dropdown" id="linkNordica"><a href="nordica.html">Nórdica</a></li>
                         <li class="link-dropdown" id="linkGeral"><a href="geral.html">Geral</a></li>
+                        <li id="link-sair"><a href="../../../back/logout.php">SAIR</a></li>
                     </ul>
                 </li>
                 <li id="link-mitologia"><a href="../paginas/romana.html">MITOLOGIA ROMANA</a></li>
