--- a/front/site/quiz/grega.html
+++ b/front/site/quiz/grega.html
@@ -59,7 +59,7 @@ if (isset($_POST['submit'])) {
     <header>
         <nav>
             <ul class="lista-nav">
-                <li id="link-home"><a href="../paginas/index.html">HOME</a></li>
+                <li id="link-home"><a href="../paginas/index.php">HOME</a></li>
                 <li>
                     <a href="#">QUIZ <span id="seta-baixo">&darr;</span></a>
                     <ul class="dropdown">
