--- a/front/site/quiz/mesopotamica.html
+++ b/front/site/quiz/mesopotamica.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <ul class="lista-nav">
-                <li id="link-home"><a href="../paginas/index.html">HOME</a></li>
+                <li id="link-home"><a href="../paginas/index.php">HOME</a></li>
                 <li>
                     <a href="#">QUIZ <span id="seta-baixo">&darr;</span></a>
                     <ul class="dropdown">
